--- a/css/style.css
+++ b/css/style.css
@@ -8,23 +8,50 @@ body,html{
     margin:0px;
     font-family: Helvetica;
 }
+
 header {
     width:100%;
-    height:40px;
-/*    background-color: #8fc1e3;*/
-    border-bottom: 1px solid rgba(127, 140, 141, 0.3);
+    height:50px;
+    background-color: #303030;
+    border-bottom: 4px solid #939C42;
+    position: relative;
+    overflow: visible;
 }
-.half{
-    display: inline-block;
-    width:49%;
+
+.lefthalf{
+    display: block;
+    width:30%;
     float:left;
-    height: 100%;
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    top: 54px;
+    overflow: scroll;
+    z-index: 2;
+    border-right: 1px solid rgba(127, 140, 141, 0.3);
+}
+
+.righthalf{
+    display: block;
+    width:70%;
+    float:right;
+    position: fixed;
+    right: 0;
+    bottom: 100px;
+    top: 54px;
+    background: #F0F2F1;
+    z-index: 1;
 }
 .messageContent h5,p{
     padding:0px;
     margin: 3px;
     font-size: 12px;
     color:#2c3e50;
+}
+
+.messageContent p{
+    height: 30px;
+    overflow: hidden;
 }
 
 .messageImage {
@@ -39,8 +66,21 @@ header {
     padding-top: 4px
 }
 
+.unread {
+    display: block;
+    position: absolute;
+    right: 15px;
+    top: 30px;
+    width: 15px;
+    height: 15px;
+    border-radius: 10px;
+    background: #939C42;
+}
+
 .messageThreadPreview {
+    position: relative;
     height:50px;
+    padding: 12px 0px;
     border-bottom:1px solid rgba(127, 140, 141, 0.1);
 }
 .messageThreadPreview:hover {
@@ -53,15 +93,29 @@ header {
 }
 
 .messageHeader {
-    width:100%;
+    width:96%;
+    margin: 15px auto;
     height:40px;
     border-bottom:1px solid rgba(127, 140, 141, 0.1);
-    margin-bottom: 15px;
 }
 .messageHeader h3{
+    display: inline;
     line-height: 30px;
     color:#2c3e50;
     margin:10px;
+}
+
+.messageHeader h4{
+    display: inline;
+    line-height: 30px;
+    color:#777;
+    margin:0px 10px 10px 10px;
+    float: right;
+}
+
+.messageHeader h4 span {
+    color: #939C42;
+    text-decoration: underline;
 }
 
 .messageHeader p{
@@ -96,6 +150,22 @@ p.messageMeta {
 .sendMessageBox {
     width:100%;
 }
+
+.sendMessageContainer {
+    height:100px;
+    width: 70%;
+    display: block;
+    overflow: auto;
+    border-top:1px solid rgba(127, 140, 141, 0.3);
+    box-sizing: border-box;
+    position: absolute;
+    bottom: 0px;
+    left: 30%;
+    z-index: 100;
+    background: #fff;
+    /*resize: none;*/
+}
+
 .sendMessageBox{
     width:49%;
     height:100px;
