--- a/css/style.css
+++ b/css/style.css
@@ -9,6 +9,10 @@ body,html{
     font-family: Helvetica;
 }
 
+h2, h3, h4, h5, h6 {
+    font-weight: 400;
+}
+
 header {
     width:100%;
     height:50px;
@@ -17,6 +21,9 @@ header {
     position: relative;
     overflow: visible;
 }
+
+#logo { background: url('../img/logo.png') right bottom no-repeat; width: 130px; height: 80px; margin: 0px 0px 0px -65px; padding: 0px 0px 0px 12px; position: absolute; bottom: 0px; left: 50%; display: block; }
+
 
 .lefthalf{
     display: block;
@@ -46,6 +53,7 @@ header {
     padding:0px;
     margin: 3px;
     font-size: 12px;
+    margin-right: 45px;
     color:#2c3e50;
 }
 
@@ -63,7 +71,6 @@ header {
 
 .messageContent {
 /*    margin-top: 10px;*/
-    padding-top: 4px
 }
 
 .unread {
@@ -85,7 +92,7 @@ header {
 }
 .messageThreadPreview:hover {
 /*    background:rgba(127, 140, 141, 0.1);*/
-    background-color: rgba(52, 152, 219, 0.3);
+    background-color: #F0F2F1;
 }
 
 #listOfMessages {
@@ -166,15 +173,13 @@ p.messageMeta {
     /*resize: none;*/
 }
 
-.sendMessageBox{
-    width:49%;
+.sendMessageBox {
     height:100px;
+    width: 90%;
     border:1px solid rgba(127, 140, 141, 0.3);
     box-sizing: border-box;
-    position: absolute;
-    bottom: 10px;
-    left: 50%;
     resize: none;
+    padding: 10px;
 }
 
 .remainingCharacters {
